<resources>
    <string name="app_name">SimCity São João</string>
    <string name="texto_home">"Festas juninas é algo muito bom! E em SimCity não é diferente! Aqui nesse app você consegue organizar a sua lista de compras para a sua festa junina de maneira fácil e simples, só cadastrar os produtos da sua receita e se divertir!"</string>
    <string name="btn_home">IR PARA PRODUTOS</string>
    <string name="cadastro_produtos">Cadastro de produtos:</string>
    <string name="btn_novo_produto">CADASTRAR NOVO PRODUTO</string>
    <string name="btn_ver_produtos">VER PRODUTOS</string>
    <string name="btn_valor_total">VALOR TOTAL</string>
    <string name="nome_produto">Nome do produto</string>
    <string name="quantidade_produto">Quantidade do produto: </string>
    <string name="valor_produto">Valor (unitário) do produto</string>
    <string name="produtos_cadastrados">Produtos cadastrados: </string>
    <string name="receita">Receita: </string>
    <string name="carrinho_de_compras">Ilustração de um carrinho de compras</string>
    <string name="coracao_vermelho">Ilustração de um coração vermelho para favoritar</string>
    <string name="nome_do_produto">Nome do produto</string>
    <string name="valor_unitario">Valor unitário: </string>
    <string name="texto_receita">texto receita</string>
    <string name="texto_quantidade">1.0</string>
    <string name="simcity_sao_joao">SimCity São João</string>
    <string name="qntd">qntd</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valor_total">O valor total de todos os produtos é de: R$</string>
</resources>