<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".produto.ProdutosFragment">

    <TextView
        android:id="@+id/tvCadastroProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem_32"
        android:text="@string/cadastro_produtos"
        android:textSize="@dimen/text_size_20"
        android:layout_margin="@dimen/margem_16"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etNomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_16"
        android:hint="@string/nome_produto"
        android:inputType="text" />

    <EditText
        android:id="@+id/etQuantidadeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_16"
        android:hint="@string/quantidade_produto"
        android:inputType="number" />

    <EditText
        android:id="@+id/etValorProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_16"
        android:hint="@string/valor_produto"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etReceita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_16"
        android:hint="@string/receita"
        android:inputType="text" />

    <Button
        android:id="@+id/btnCadastrarNovoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_16"
        android:backgroundTint="@color/terceira_cor"
        android:text="@string/btn_novo_produto" />

    <Button
        android:id="@+id/btnVerProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_16"
        android:backgroundTint="@color/quarta_cor"
        android:text="@string/btn_ver_produtos" />

</LinearLayout>