<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".produto.ValorTotalFragment">

    <ImageView
        android:id="@+id/ivCarrinho"
        android:layout_width="@dimen/largura_80"
        android:layout_height="@dimen/altura_80"
        android:layout_marginTop="@dimen/margem_90"
        android:src="@drawable/carrinho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvValorTotal"
        android:layout_width="@dimen/margem_0"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/valor_total"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCarrinho" />

    <Button
        android:id="@+id/btnCadastrarNovoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_16"
        android:backgroundTint="@color/terceira_cor"
        android:text="@string/btn_novo_produto"
        app:layout_constraintTop_toBottomOf="@+id/tvValorTotal" />

    <Button
        android:id="@+id/btnVerProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_16"
        android:backgroundTint="@color/quarta_cor"
        android:text="@string/btn_ver_produtos"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrarNovoProduto" />

</androidx.constraintlayout.widget.ConstraintLayout>